fix scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -114,6 +114,7 @@ body {
 
 ::-webkit-scrollbar {
     height: 4px;
+    width: 4px;
 }
 
 ::-webkit-scrollbar-track {
